--- a/VRChat/38/1258138.html
+++ b/VRChat/38/1258138.html
@@ -71,9 +71,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -103,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "j6dZdFSBmB/spaJF1J8z86AktupgrxTVBZdT3pZXKO0="></script>
+    "xtk7VCOzJ0oMwUn2z/XZT47NteSsFqJ/AeN2RtgoH+c="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『Miltonia』","description":"3Dオリジナルモデル\nMiltonia(ミルトニア)△21584\n\n\nVRCでの使用を想定した3Dモデルです。\nReflex-Shader-2.1を使用しておりますので、あらかじめインストールしてください。\n\n肩のパーツは自由につけ外し可能です。\n\n\n・リップシンク15種類\n・表情各8種類程度\n\n【内容】\n・設定済Unitypackage(Dynamic boneおよびVRC SDKは各自ダウンロードなりして下さい)\n・FBX\n・テクスチャ\n\n\n【禁則事項】\n・自作発言および再配布(public設定でのアップロードやワールドペデスタルに置くこともも禁止)\n・営利活動\n\n著作権はれぞにあり放棄しておりません。テクスチャの改変は自由に行ってください。\n\n【免責事項】\n・当モデルを使用することで使用者側に不利な問題が生じた場合、いかなるものであっても\n当方は責任を一切負いません\n\n何かありましたらこちら(https://twitter.com/resol72)まで連絡ください。\n\n2019/3/5 blueprint IDのデタッチ済のをアップしました。","url":"https://booth.pm/ja/items/1258138","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/b9012e25-620b-4a66-a927-58ca245f129c/i/1258138/505de4ff-108a-4124-8eb1-832bef2fe829_base_resized.jpg"}
     </script>
@@ -116,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="j6dZdFSBmB/spaJF1J8z86AktupgrxTVBZdT3pZXKO0="></script>
+    nonce="xtk7VCOzJ0oMwUn2z/XZT47NteSsFqJ/AeN2RtgoH+c="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -140,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +153,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -195,7 +195,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1258138/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               105
@@ -210,14 +210,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1258138/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               105
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
