--- a/VRChat/08/1258008.html
+++ b/VRChat/08/1258008.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "JV3kDVkZ1OTkQ77J+sIw/biYNk6WxLCwEYNw6GbI8Yo="></script>
+    "FIvHBzi11tqR7YZs9fnuiCr7eOUphTlWfZpG0tOa4hE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"宝石10個セット (FBXのみ)","description":"宝石（のFBX）10個セットです。\n\n内容についてはテクストファイルを読んでください。\n少ないもので30ポリ、多くて168ポリとなります。\n\nUV展開やshaderはついていませんので、注意してください。","url":"https://booth.pm/ja/items/1258008","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/b192de80-ab9a-405c-a8c2-559c78ffe3e6/i/1258008/ef0d1066-3f74-4ed5-b142-6a573896a940_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="JV3kDVkZ1OTkQ77J+sIw/biYNk6WxLCwEYNw6GbI8Yo="></script>
+    nonce="FIvHBzi11tqR7YZs9fnuiCr7eOUphTlWfZpG0tOa4hE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1258008/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               67
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1258008/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               67
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
