--- a/VRChat/02/1256102.html
+++ b/VRChat/02/1256102.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "1Y011Ei+hHAOsE7pZOp+6kSQPV/vrhXgF+WJsyDM48g="></script>
+    "Jm2Jb+HVLDsmzvClWq9Mi6CZXr9i/BHeW7HmHotfq9E="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"大鎌","description":"418ポリゴンのなんの変哲もない鎌です。\n改変用のpsdファイルも同梱しております。\n\n宝石部分のマテリアルにGemシェーダーを適用することをおすすめします。","url":"https://booth.pm/ja/items/1256102","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/f60fec08-4e58-416f-bcd8-37d2ece3b576/i/1256102/7272738a-cca0-4fc7-b550-75ec169c1680_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="1Y011Ei+hHAOsE7pZOp+6kSQPV/vrhXgF+WJsyDM48g="></script>
+    nonce="Jm2Jb+HVLDsmzvClWq9Mi6CZXr9i/BHeW7HmHotfq9E="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1256102/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               94
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1256102/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               94
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
