--- a/VRChat/87/1256087.html
+++ b/VRChat/87/1256087.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "msIXZSi+EzISncnAbNoYOnx4TeWQwqJOkXCff2Xbv5M="></script>
+    "e9iZ4MQFHWoCt3JZrn/yJyosVfmpCFamCnElROff+Sg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル「ミーシェ」","description":"快活な感じの耳と尻尾の生えた女の子です。\n\n◆VRchat用を想定して作っていますが、ゲームやアニメーション、配信などでも使えます。\n\n◆VRゴーグルOculusQuestを用いたVRchatのご利用には対応しておりません。（Quest対応はしておりません。）\n\n◆「あ・い・う・え・お」のリップシンクとVRchat用のリップシンクを用意してます。\n◆表情アニメーションは19種類をデフォルトで用意してます。\n◆眉、目、口のシェイプキーが分かれているので自分で表情を作成することも可能です。\n\n◆本モデルのシェーダーはlilToonを使用しております。\n\n◆改変及び商用利用も可能です。\n\n※UnityにインポートするときVRCSDKをあらかじめインポートしておいてください。\n\n※DL商品の性質上返品したという証明ができない点、BoothではDL商品の購入後の返品、キャンセル手続きはご利用できない点からご返金等に応じることはできません。\n\n★内容物\n・3Dモデルfbxデータ\n・テクスチャpsdデータ\n・テクスチャpngデータ\n・UnityPackageデータ\n・3Dモデルblendデータ\n\n","url":"https://booth.pm/ja/items/1256087","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/ed52788c-0b3b-4e38-9ded-1e5797daf0ef/i/1256087/31156a98-56b4-4c63-93e5-ea4df9b35ac9_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="msIXZSi+EzISncnAbNoYOnx4TeWQwqJOkXCff2Xbv5M="></script>
+    nonce="e9iZ4MQFHWoCt3JZrn/yJyosVfmpCFamCnElROff+Sg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,10 +173,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1256087/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              9409
+                              9414
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1256087/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              9409
+                              9414
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
