--- a/VRChat/97/1255997.html
+++ b/VRChat/97/1255997.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "hn2R1Jh1dbBRSp+CtCZDALpIqoS5qwWEF1lgHR+HPe8="></script>
+    "e6byjQoQjjWU8n5+NxJu8kMZQClIEGNfBZhaRkpCXBg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRChat想定]支援ポッド\"Pod-DD-alpha\"[アニメーション付き]","description":"浮遊するディスクの読み書き機能を持った支援ポッドです。\nVRChatでの使用を想定していますが、ゲーム等他の用途でも利用可能です。\n上下に浮遊するアニメーションを同梱しています。\nシェーダは含まれておりませんのでご了承ください（画像ではArktoon-Shadersを使用）。\n下部説明と利用規約を読んだ上での利用をお願いします。\nポリゴン数：三角面836\n問い合わせ等はこちら(https://twitter.com/HarryDrums5)","url":"https://booth.pm/ja/items/1255997","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"500","highPrice":"1000"},"image":"https://booth.pximg.net/c/620x620/c048ece8-d18f-41ac-af67-bab239496c6a/i/1255997/e55d6301-1726-45fa-bb39-e12f25324869_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hn2R1Jh1dbBRSp+CtCZDALpIqoS5qwWEF1lgHR+HPe8="></script>
+    nonce="e6byjQoQjjWU8n5+NxJu8kMZQClIEGNfBZhaRkpCXBg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +156,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1255997/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               33
@@ -169,14 +171,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1255997/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               33
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
